# Efrei

C⁄C++/C++/Cours/: a.out
Data Base/TP-1/: Conf  cinema.sql  script_tp.sql
Data Base/TP-3/: data_script.sql
Data Base/TP2/: script.sql  view.sql
Data Base/TP2/TP2SQL/: ScriptTp2BDD_Recherche.sql
Data Base/TP3/: script_creation.sql  script_insertion.sql  script_request.sql
Data Base/TP4/: TP4_BDD_L3A.docx  script_create.sql
Data Process/: .RData  .Rhistory  Annlyse_de_donnees.xlsx  centre_Reduit_eigen.csv  data.csv  data.ods  script_Bilan_financier_petrol.R
Data Process/TPNOTE/: T202.R
Ges_Projet/: AtelierN2-Equipe 1.gan  TD1-EquipeN°8.pptx
Ges_Projet/TP3/: AtelierN3-Equipe 9.xlsx  AtelierN3Bis-Equipe 9.xlsx  TD03_ChronoDrive_grille_a_renseigner.xls
Ges_Projet/TP3/2/: AtelierN3-Equipe 9.xlsx  AtelierN3Bis-Equipe 9.xlsx
Ges_Projet/TP4/: AtelierN4-Equipe-3.xlsx
Ges_Projet/TP5/: Modele de tab de bord.ppt  TD05 - Equipe 3 modele description indicateur.xlsx  TD05 - Equipe X modele description indicateur.xlsx  TD5-Equipe3-Modele de tab de bord.pptx
Java/: planning.ics
Java/Java_TP2_092019_ApNB/: nbactions.xml  pom.xml
Java/tp2/: pom.xml
Java/tp3/: Download errors.txt  inputFiles.lst.txt  pom.xml
Langage_et_compilation/TPs/: TPCompilation-AdjiKebiechBrigui.1.mcz
Operating system/tp/corrections_TP1_part1_tableaux/: CMakeLists.txt  gestion_matrice.c  gestion_matrice.h  gestion_tableaux.c  my_struct.h  test_gestion_tableaux.c
Rapport/: gantt_effectif.gan
Struct-donnees/TP2/: exo1  exo1.c  headers_functions.h  manager_functions.c  struct.c
(+43 files in other folders)
